--- a/budgetee-server/requirements.txt
+++ b/budgetee-server/requirements.txt
@@ -2,6 +2,7 @@ aniso8601==9.0.1
 click==8.0.4
 Flask==2.0.3
 Flask-Admin==1.6.0
+Flask-Cors==3.0.10
 Flask-RESTful==0.3.9
 greenlet==1.1.2
 itsdangerous==2.1.1
