--- a/budgetee-client/package.json
+++ b/budgetee-client/package.json
@@ -12,7 +12,9 @@
     "@types/react-dom": "^18.0.1",
     "@types/react-router": "^5.1.18",
     "axios": "^0.26.1",
+    "chart.js": "^3.7.1",
     "react": "^18.0.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
