--- a/budgetee-server/requirements.txt
+++ b/budgetee-server/requirements.txt
@@ -1,17 +1,7 @@
-aniso8601==9.0.1
-click==8.0.4
 Flask==2.0.3
-Flask-Admin==1.6.0
-Flask-Cors==3.0.10
-Flask-RESTful==0.3.9
-greenlet==1.1.2
-itsdangerous==2.1.1
-Jinja2==3.0.3
-MarkupSafe==2.1.1
-psycopg2==2.9.3
+Flask_Admin==1.6.0
+Flask_Cors==3.0.10
+Flask_RESTful==0.3.9
 PyJWT==2.3.0
-pytz==2021.3
-six==1.16.0
+pytest==7.1.2
 SQLAlchemy==1.4.32
-Werkzeug==2.0.3
-WTForms==3.0.1
