--- a/.github/workflows/test-api.yaml
+++ b/.github/workflows/test-api.yaml
@@ -3,23 +3,16 @@ on: [push]
 jobs:
   runtests:
     runs-on: ubuntu-latest
-    container: ubuntu
-
+    
     services:
       postgres:
         image: postgres:14.1-alpine
         env:
-          POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: postgres
-        # health checks
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
         ports:
-          - 5432/tcp
+        - 5432:5432
+        # needed because the postgres container does not provide a healthcheck
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
       - name: Check out repository code
@@ -30,15 +23,12 @@ jobs:
         with:
           python-version: "3.x"
 
-      - name: Install dependencies
+      - name: Install dependencies and run tests
         working-directory: ./budgetee-server
         run: |
-          python -m pip install --upgrade pip
+          pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Run unit tests
-        working-directory: ./budgetee-server
-        run: python -m pytest -s --import-mode=append tests/
+          pytest
         env:
           APP_SECRET: f06709g6df9s87gd0f98g6s0d9
-          DATABASE_URL: postgresql://postgres:postgres@postgres:5432/postgres
+          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/postgres
