--- a/budgetee-server/requirements.txt
+++ b/budgetee-server/requirements.txt
@@ -3,6 +3,7 @@ Flask_Admin==1.6.0
 Flask_Cors==3.0.10
 flask_profiler==1.8.1
 Flask_RESTful==0.3.9
+gunicorn==20.1.0
 psycopg2
 PyJWT==2.3.0
 pytest==7.1.2
